[project]
name = "comfyui-clh-tool"
description = "Some mathematical calculation nodes，freedom And omnipotent, string calculation nodes, can customize the number of parameters and calculation formulas（expression）. The calculation content can also be displayed in places such as the label title of Comfy Node，String to Image Title Label"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/clhui/ComfyUi-clh-Tool"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "clhui"
DisplayName = "ComfyUi-clh-Tool"
Icon = ""
